WCAG 2.1 AA compliance fixes

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,2 +1,5 @@
 /* Import Vibe Brutalism CSS */
 @import './vibe-brutalism.css';
+
+/* WCAG 2.1 AA Compliance Overrides */
+@import './wcag-overrides.css';
