--- a/resources/css/fonts.css
+++ b/resources/css/fonts.css
@@ -17,29 +17,28 @@
  * 4. Update the src paths below if filenames differ
  */
 
-/* Space Grotesk Semi Bold (600) */
-@font-face {
-    font-family: 'Space Grotesk';
-    font-style: normal;
-    font-weight: 600;
-    font-display: swap;
-    src: url('/fonts/space-grotesk/SpaceGrotesk-SemiBold.woff2') format('woff2');
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+
+.space-grotesk-600 {
+  font-family: "Space Grotesk", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
 }
 
-/* Space Grotesk Bold (700) */
-@font-face {
-    font-family: 'Space Grotesk';
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url('/fonts/space-grotesk/SpaceGrotesk-Bold.woff2') format('woff2');
+
+.space-grotesk-700 {
+  font-family: "Space Grotesk", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
 }
 
-/* Space Grotesk Black (900) */
-@font-face {
-    font-family: 'Space Grotesk';
-    font-style: normal;
-    font-weight: 900;
-    font-display: swap;
-    src: url('/fonts/space-grotesk/SpaceGrotesk-Black.woff2') format('woff2');
+
+.space-grotesk-900 {
+  font-family: "Space Grotesk", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
 }
+
