--- a/resources/css/fonts.css
+++ b/resources/css/fonts.css
@@ -1,26 +1,22 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
-
-.space-grotesk-600 {
-  font-family: "Space Grotesk", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
+/* Space Grotesk - Variable Font (supports weights 300-700) */
+@font-face {
+  font-family: 'Space Grotesk';
   font-style: normal;
+  font-weight: 300 700;
+  font-display: swap;
+  src: url('/fonts/space-grotesk/SpaceGrotesk-Variable.woff2') format('woff2');
 }
 
-
-.space-grotesk-700 {
+.space-grotesk-600 {
   font-family: "Space Grotesk", sans-serif;
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
 }
 
-
-.space-grotesk-900 {
+.space-grotesk-700 {
   font-family: "Space Grotesk", sans-serif;
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
 }
-
